Integrated with backend

--- a/HTML/manage_roles.html
+++ b/HTML/manage_roles.html
@@ -20,42 +20,41 @@
     </div>
 
     <div class="content">
-        <header>Manage Roles</header>
+        <div class="header">
+            <header>Manage Roles</header>
+            <button class="create-btn">Create Role</button>
+        </div>
         <table>
             <tr>
                 <th>ID</th>
-                <th>User Name</th>
                 <th>Role</th>
                 <th>Permissions</th>
                 <th>Actions</th>
             </tr>
             <tr>
                 <td>1</td>
-                <td>John Doe</td>
                 <td>Admin</td>
                 <td>Full Access</td>
                 <td>
-                    <button>Change Password</button>
+                    <button>View</button>
                     <button>Delete</button>
                 </td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Jane Smith</td>
                 <td>User</td>
                 <td>Read, Write</td>
                 <td>
-                    <button>Change Password</button>
+                    <button>View</button>
                     <button>Delete</button>
                 </td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Michael Brown</td>
                 <td>Viewer</td>
                 <td>Read-Only</td>
                 <td>
-                    <button>Change Password</button>
+                    <button>View</button>
                     <button>Delete</button>
                 </td>
             </tr>
