--- a/HTML/manage_users.html
+++ b/HTML/manage_users.html
@@ -20,7 +20,10 @@
     </div>
 
     <div class="content">
-        <header>Manage Users</header>
+        <div class="header">
+            <header>Manage Users</header>
+            <button class="create-btn">Create User</button>
+        </div>
         <table>
             <tr>
                 <th>ID</th>
