--- a/HTML/change_password.html
+++ b/HTML/change_password.html
@@ -26,8 +26,10 @@
             color: #2c3e50;
         }
 
-        select, input[type="password"] {
-            width: 100%;
+        select, 
+        input[type="password"],
+        input[type="text"] {
+            width: 95%;
             padding: 10px;
             margin-top: 5px;
             border: 1px solid #ddd;
@@ -55,6 +57,10 @@
         .cancel-btn:hover {
             background-color: #c0392b;
         }
+
+        .show-password{
+            margin-bottom: 1rem;
+        }
     </style>
 </head>
 <body>
@@ -73,18 +79,8 @@
     <div class="content">
         <header>Change Password</header>
         <div class="form-container">
-            <h2>Select User & Update Password</h2>
+            <h2>Update Password</h2>
             <form>
-                <!-- Dropdown for selecting user -->
-                <div class="form-group">
-                    <label for="user-select">Select User</label>
-                    <select id="user-select" name="user">
-                        <option value="1">John Doe</option>
-                        <option value="2">Jane Smith</option>
-                        <option value="3">Michael Brown</option>
-                    </select>
-                </div>
-
                 <!-- New Password Field -->
                 <div class="form-group">
                     <label for="password">New Password</label>
@@ -97,6 +93,12 @@
                     <input type="password" id="confirm_password" name="confirm_password" required>
                 </div>
 
+                <!-- Show Password -->
+                 <div class="show-password">
+                    <input type="checkbox" name="" id="showPwd">
+                    <span>Show Password</span>
+                 </div>
+                
                 <!-- Submit and Cancel Buttons -->
                 <div class="form-group">
                     <button type="submit">Submit</button>
@@ -106,6 +108,23 @@
         </div>
     </div>
 </div>
+
+<script defer>
+    const showPwdCheckbox = document.getElementById('showPwd');
+    const pwd1 = document.getElementById('password');
+    const pwd2 = document.getElementById('confirm_password');
+
+    showPwdCheckbox.addEventListener('click' , e => {
+        if(pwd1.type === 'text' && pwd2.type === 'text'){
+            pwd1.type = 'password';
+            pwd2.type = 'password';
+        }
+        else if(pwd1.type === 'password' && pwd2.type === 'password'){
+            pwd1.type = 'text';
+            pwd2.type = 'text';
+        }
+    });
+</script>
 
 </body>
 </html>
