--- a/HTML/manage_roles.html
+++ b/HTML/manage_roles.html
@@ -5,6 +5,142 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Roles</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Additional styling for buttons and modals */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .create-btn {
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .create-btn:hover {
+            background-color: #2980b9;
+        }
+
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.5);
+        }
+
+        .modal-content {
+            background-color: white;
+            margin: 10% auto;
+            padding: 20px;
+            border-radius: 10px;
+            width: 40%;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .close-btn {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close-btn:hover,
+        .close-btn:focus {
+            color: black;
+            cursor: pointer;
+        }
+
+        .form-group label {
+            display: block;
+            margin: 10px 0 5px;
+            font-weight: bold;
+        }
+
+        .form-group input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        .permissions-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .permission-item {
+            background-color: #ecf0f1;
+            padding: 5px 10px;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+        }
+
+        .permission-item span {
+            margin-right: 10px;
+        }
+
+        .remove-permission {
+            background-color: #e74c3c;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+        }
+
+        .add-permission-btn {
+            background-color: #3498db;
+            color: white;
+            padding: 5px 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .modal-footer {
+            text-align: right;
+        }
+
+        .modal-footer button {
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .save-btn {
+            background-color: #3498db;
+            color: white;
+        }
+
+        .cancel-btn {
+            background-color: #e74c3c;
+            color: white;
+        }
+
+        .save-btn:hover {
+            background-color: #2980b9;
+        }
+
+        .cancel-btn:hover {
+            background-color: #c0392b;
+        }
+    </style>
 </head>
 <body>
 
@@ -20,48 +156,177 @@
     </div>
 
     <div class="content">
-        <header>Manage Roles</header>
+        <div class="header">
+            <header>Manage Roles</header>
+            <button class="create-btn" id="createRoleBtn">Create Role</button>
+        </div>
         <table>
             <tr>
                 <th>ID</th>
-                <th>User Name</th>
                 <th>Role</th>
                 <th>Permissions</th>
                 <th>Actions</th>
             </tr>
             <tr>
                 <td>1</td>
-                <td>John Doe</td>
                 <td>Admin</td>
                 <td>Full Access</td>
                 <td>
-                    <button>Change Password</button>
+                    <button class="view-btn">View</button>
                     <button>Delete</button>
                 </td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Jane Smith</td>
                 <td>User</td>
                 <td>Read, Write</td>
                 <td>
-                    <button>Change Password</button>
+                    <button class="view-btn">View</button>
                     <button>Delete</button>
                 </td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Michael Brown</td>
                 <td>Viewer</td>
                 <td>Read-Only</td>
                 <td>
-                    <button>Change Password</button>
+                    <button class="view-btn">View</button>
                     <button>Delete</button>
                 </td>
             </tr>
         </table>
     </div>
 </div>
+
+<!-- Modal for Creating New Role -->
+<div id="createRoleModal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn" id="closeCreateModal">&times;</span>
+        <h2>Create New Role</h2>
+        <form>
+            <div class="form-group">
+                <label for="role-name">Role Name</label>
+                <input type="text" id="role-name" name="role-name" required>
+            </div>
+            <div class="form-group">
+                <label>Permissions</label>
+                <div class="permissions-list" id="createPermissionsList"></div>
+                <button type="button" class="add-permission-btn" id="addCreatePermission">Add Permission</button>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="save-btn">Save</button>
+                <button type="button" class="cancel-btn" id="cancelCreateBtn">Cancel</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<!-- Modal for Viewing/Editing Role -->
+<div id="viewRoleModal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn" id="closeViewModal">&times;</span>
+        <h2>Edit Role</h2>
+        <form>
+            <div class="form-group">
+                <label for="edit-role-name">Role Name</label>
+                <input type="text" id="edit-role-name" name="role-name" required>
+            </div>
+            <div class="form-group">
+                <label>Permissions</label>
+                <div class="permissions-list" id="editPermissionsList"></div>
+                <button type="button" class="add-permission-btn" id="addEditPermission">Add Permission</button>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="save-btn">Save</button>
+                <button type="button" class="cancel-btn" id="cancelEditBtn">Cancel</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<script>
+    // Create Role Modal Logic
+    const createRoleBtn = document.getElementById('createRoleBtn');
+    const createRoleModal = document.getElementById('createRoleModal');
+    const closeCreateModal = document.getElementById('closeCreateModal');
+    const cancelCreateBtn = document.getElementById('cancelCreateBtn');
+    const createPermissionsList = document.getElementById('createPermissionsList');
+    const addCreatePermissionBtn = document.getElementById('addCreatePermission');
+
+    // Open modal for creating a role
+    createRoleBtn.onclick = function() {
+        createRoleModal.style.display = 'block';
+    }
+
+    // Close modal when clicking the "x" button or "Cancel"
+    closeCreateModal.onclick = function() {
+        createRoleModal.style.display = 'none';
+    }
+    cancelCreateBtn.onclick = function() {
+        createRoleModal.style.display = 'none';
+    }
+
+    // Close modal when clicking outside the modal content
+    window.onclick = function(event) {
+        if (event.target === createRoleModal) {
+            createRoleModal.style.display = 'none';
+        }
+    }
+
+    // Add and remove permissions dynamically for Create Role
+    addCreatePermissionBtn.onclick = function() {
+        const permissionItem = document.createElement('div');
+        permissionItem.classList.add('permission-item');
+        permissionItem.innerHTML = '<span>New Permission</span><button class="remove-permission">&times;</button>';
+        createPermissionsList.appendChild(permissionItem);
+
+        permissionItem.querySelector('.remove-permission').onclick = function() {
+            createPermissionsList.removeChild(permissionItem);
+        }
+    }
+
+    // View/Edit Role Modal Logic
+    const viewRoleModal = document.getElementById('viewRoleModal');
+    const closeViewModal = document.getElementById('closeViewModal');
+    const cancelEditBtn = document.getElementById('cancelEditBtn');
+    const viewButtons = document.querySelectorAll('.view-btn');
+    const editPermissionsList = document.getElementById('editPermissionsList');
+    const addEditPermissionBtn = document.getElementById('addEditPermission');
+
+    // Open modal for viewing/editing a role
+    viewButtons.forEach(btn => {
+        btn.onclick = function() {
+            viewRoleModal.style.display = 'block';
+        }
+    });
+
+    // Close modal for viewing/editing a role
+    closeViewModal.onclick = function() {
+        viewRoleModal.style.display = 'none';
+    }
+    cancelEditBtn.onclick = function() {
+        viewRoleModal.style.display = 'none';
+    }
+
+    // Add and remove permissions dynamically for Edit Role
+    addEditPermissionBtn.onclick = function() {
+        const permissionItem = document.createElement('div');
+        permissionItem.classList.add('permission-item');
+        permissionItem.innerHTML = '<span>New Permission</span><button class="remove-permission">&times;</button>';
+        editPermissionsList.appendChild(permissionItem);
+
+        permissionItem.querySelector('.remove-permission').onclick = function() {
+            editPermissionsList.removeChild(permissionItem);
+        }
+    }
+
+    // Close modal when clicking outside the modal content
+    window.onclick = function(event) {
+        if (event.target === viewRoleModal) {
+            viewRoleModal.style.display = 'none';
+        }
+    }
+</script>
 
 </body>
 </html>
