--- a/HTML/manage_roles.html
+++ b/HTML/manage_roles.html
@@ -3,31 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Roles</title>
+    <title>Manage Roles - Multi-select</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Additional styling for buttons and modals */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .create-btn {
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .create-btn:hover {
-            background-color: #2980b9;
-        }
-
-        /* Modal styles */
+        /* Style for the modal and form */
         .modal {
             display: none;
             position: fixed;
@@ -36,7 +15,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0,0,0,0.5);
+            background-color: rgba(0, 0, 0, 0.5);
         }
 
         .modal-content {
@@ -49,97 +28,100 @@
         }
 
         .close-btn {
-            color: #aaa;
             float: right;
             font-size: 28px;
             font-weight: bold;
+            color: #aaa;
         }
 
-        .close-btn:hover,
-        .close-btn:focus {
+        .close-btn:hover {
             color: black;
             cursor: pointer;
         }
 
+        .form-group {
+            margin-bottom: 20px;
+        }
+
         .form-group label {
-            display: block;
-            margin: 10px 0 5px;
             font-weight: bold;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 10px;
             margin-bottom: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+            display: block;
         }
 
-        .permissions-list {
+        .input-tags {
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .permission-item {
-            background-color: #ecf0f1;
-            padding: 5px 10px;
+            gap: 5px;
+            padding: 5px;
+            border: 1px solid #ddd;
             border-radius: 5px;
-            display: flex;
-            align-items: center;
+            min-height: 40px;
         }
 
-        .permission-item span {
-            margin-right: 10px;
-        }
-
-        .remove-permission {
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            width: 20px;
-            height: 20px;
-            cursor: pointer;
-        }
-
-        .add-permission-btn {
+        .tag {
             background-color: #3498db;
             color: white;
             padding: 5px 10px;
-            border: none;
             border-radius: 5px;
+            display: inline-flex;
+            align-items: center;
+        }
+
+        .tag .remove-tag {
+            margin-left: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .dropdown-select {
+            border: 1px solid #ddd;
+            background-color: white;
+            border-radius: 5px;
+            position: absolute;
+            width: 100%;
+            max-height: 150px;
+            overflow-y: auto;
+            z-index: 100;
+            display: none;
+        }
+
+        .dropdown-select option {
+            padding: 10px;
             cursor: pointer;
         }
 
-        .modal-footer {
-            text-align: right;
+        .dropdown-select option:hover {
+            background-color: #ecf0f1;
         }
 
-        .modal-footer button {
+        .save-btn, .cancel-btn {
             padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
             cursor: pointer;
+            border-radius: 5px;
+            margin-right: 10px;
         }
 
         .save-btn {
             background-color: #3498db;
             color: white;
-        }
-
-        .cancel-btn {
-            background-color: #e74c3c;
-            color: white;
+            border: none;
         }
 
         .save-btn:hover {
             background-color: #2980b9;
         }
 
+        .cancel-btn {
+            background-color: #e74c3c;
+            color: white;
+            border: none;
+        }
+
         .cancel-btn:hover {
             background-color: #c0392b;
         }
+
     </style>
 </head>
 <body>
@@ -185,15 +167,6 @@
                     <button>Delete</button>
                 </td>
             </tr>
-            <tr>
-                <td>3</td>
-                <td>Viewer</td>
-                <td>Read-Only</td>
-                <td>
-                    <button class="view-btn">View</button>
-                    <button>Delete</button>
-                </td>
-            </tr>
         </table>
     </div>
 </div>
@@ -209,9 +182,14 @@
                 <input type="text" id="role-name" name="role-name" required>
             </div>
             <div class="form-group">
-                <label>Permissions</label>
-                <div class="permissions-list" id="createPermissionsList"></div>
-                <button type="button" class="add-permission-btn" id="addCreatePermission">Add Permission</button>
+                <label for="permissions">Select Permissions</label>
+                <div id="inputTags" class="input-tags"></div>
+                <input id="my-input" type="text" placeholder="Add permission" autocomplete="off" />
+                <div id="dropdownSelect" class="dropdown-select">
+                    <option value="read">Read</option>
+                    <option value="write">Write</option>
+                    <option value="full-access">Full Access</option>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="save-btn">Save</button>
@@ -221,111 +199,71 @@
     </div>
 </div>
 
-<!-- Modal for Viewing/Editing Role -->
-<div id="viewRoleModal" class="modal">
-    <div class="modal-content">
-        <span class="close-btn" id="closeViewModal">&times;</span>
-        <h2>Edit Role</h2>
-        <form>
-            <div class="form-group">
-                <label for="edit-role-name">Role Name</label>
-                <input type="text" id="edit-role-name" name="role-name" required>
-            </div>
-            <div class="form-group">
-                <label>Permissions</label>
-                <div class="permissions-list" id="editPermissionsList"></div>
-                <button type="button" class="add-permission-btn" id="addEditPermission">Add Permission</button>
-            </div>
-            <div class="modal-footer">
-                <button type="submit" class="save-btn">Save</button>
-                <button type="button" class="cancel-btn" id="cancelEditBtn">Cancel</button>
-            </div>
-        </form>
-    </div>
-</div>
-
 <script>
-    // Create Role Modal Logic
     const createRoleBtn = document.getElementById('createRoleBtn');
     const createRoleModal = document.getElementById('createRoleModal');
     const closeCreateModal = document.getElementById('closeCreateModal');
     const cancelCreateBtn = document.getElementById('cancelCreateBtn');
-    const createPermissionsList = document.getElementById('createPermissionsList');
-    const addCreatePermissionBtn = document.getElementById('addCreatePermission');
+    const inputTags = document.getElementById('inputTags');
+    const myInput = document.getElementById('my-input');
+    const dropdownSelect = document.getElementById('dropdownSelect');
 
     // Open modal for creating a role
     createRoleBtn.onclick = function() {
         createRoleModal.style.display = 'block';
-    }
+    };
 
     // Close modal when clicking the "x" button or "Cancel"
     closeCreateModal.onclick = function() {
         createRoleModal.style.display = 'none';
-    }
+    };
     cancelCreateBtn.onclick = function() {
         createRoleModal.style.display = 'none';
-    }
+    };
+
+    // Show dropdown options when input is focused
+    myInput.addEventListener('focus', function() {
+        dropdownSelect.style.display = 'block';
+    });
+
+    // Add permission to the tag list and remove from dropdown
+    dropdownSelect.addEventListener('click', function(event) {
+        if (event.target.tagName === 'OPTION') {
+            const value = event.target.value;
+            const text = event.target.innerText;
+
+            // Create tag element
+            const tag = document.createElement('div');
+            tag.classList.add('tag');
+            tag.innerHTML = `<span>${text}</span><span class="remove-tag">&times;</span>`;
+
+            // Append tag to the inputTags container
+            inputTags.appendChild(tag);
+
+            // Remove option from dropdown
+            event.target.style.display = 'none';
+
+            // Remove tag on click of the cross button
+            tag.querySelector('.remove-tag').addEventListener('click', function() {
+                inputTags.removeChild(tag);
+                event.target.style.display = 'block'; // Show the option again
+            });
+        }
+    });
+
+    // Close dropdown if clicked outside of it
+    window.addEventListener('click', function(event) {
+        if (!dropdownSelect.contains(event.target) && event.target !== myInput) {
+            dropdownSelect.style.display = 'none';
+        }
+    });
 
     // Close modal when clicking outside the modal content
     window.onclick = function(event) {
         if (event.target === createRoleModal) {
             createRoleModal.style.display = 'none';
         }
-    }
-
-    // Add and remove permissions dynamically for Create Role
-    addCreatePermissionBtn.onclick = function() {
-        const permissionItem = document.createElement('div');
-        permissionItem.classList.add('permission-item');
-        permissionItem.innerHTML = '<span>New Permission</span><button class="remove-permission">&times;</button>';
-        createPermissionsList.appendChild(permissionItem);
-
-        permissionItem.querySelector('.remove-permission').onclick = function() {
-            createPermissionsList.removeChild(permissionItem);
-        }
-    }
-
-    // View/Edit Role Modal Logic
-    const viewRoleModal = document.getElementById('viewRoleModal');
-    const closeViewModal = document.getElementById('closeViewModal');
-    const cancelEditBtn = document.getElementById('cancelEditBtn');
-    const viewButtons = document.querySelectorAll('.view-btn');
-    const editPermissionsList = document.getElementById('editPermissionsList');
-    const addEditPermissionBtn = document.getElementById('addEditPermission');
-
-    // Open modal for viewing/editing a role
-    viewButtons.forEach(btn => {
-        btn.onclick = function() {
-            viewRoleModal.style.display = 'block';
-        }
-    });
-
-    // Close modal for viewing/editing a role
-    closeViewModal.onclick = function() {
-        viewRoleModal.style.display = 'none';
-    }
-    cancelEditBtn.onclick = function() {
-        viewRoleModal.style.display = 'none';
-    }
-
-    // Add and remove permissions dynamically for Edit Role
-    addEditPermissionBtn.onclick = function() {
-        const permissionItem = document.createElement('div');
-        permissionItem.classList.add('permission-item');
-        permissionItem.innerHTML = '<span>New Permission</span><button class="remove-permission">&times;</button>';
-        editPermissionsList.appendChild(permissionItem);
-
-        permissionItem.querySelector('.remove-permission').onclick = function() {
-            editPermissionsList.removeChild(permissionItem);
-        }
-    }
-
-    // Close modal when clicking outside the modal content
-    window.onclick = function(event) {
-        if (event.target === viewRoleModal) {
-            viewRoleModal.style.display = 'none';
-        }
-    }
+    };
 </script>
 
 </body>
