Admin panel udpate

--- a/HTML/dashboard.html
+++ b/HTML/dashboard.html
@@ -15,7 +15,7 @@
         <a href="manage_users.html">Manage Users</a>
         <a href="manage_roles.html">Manage Roles</a>
         <a href="change_password.html">Change Password</a>
-        <a href="file_manager.html" class="file-access-btn">File Access Storage</a>
+        <a href="" class="file-access-btn">File Access Storage</a>
         <a href="#">Logout</a>
     </div>
 
