--- a/public/admin/change_password.html
+++ b/public/admin/change_password.html
@@ -78,8 +78,8 @@
         <a href="manage_users.html">Manage Users</a>
         <a href="manage_roles.html">Manage Roles</a>
         <a href="change_password.html">Change Password</a>
-        <a href="file_manager.html" class="file-access-btn">File Access Storage</a>
-        <a href="#">Logout</a>
+        <a href="/" class="file-access-btn">File Access Storage</a>
+        <a href="#" id="logout">Logout</a>
     </div>
 
     <div class="content">
@@ -114,6 +114,9 @@
 </div>
 
 <script>
+    const userLoggedIn = sessionStorage.getItem('nas-token');
+    if(!userLoggedIn) window.location.href = '/login.html';
+
     const showPwdCheckbox = document.getElementById('showPwd');
     const pwd1 = document.getElementById('password');
     const pwd2 = document.getElementById('confirm_password');
@@ -150,6 +153,12 @@
             alert('Error: ' + err.message);
         }
     });
+
+    const logout = () => {
+        const sessionStorage = window.sessionStorage.clear();
+        location.replace('/');
+    }
+    document.querySelector('#logout').addEventListener('click', logout);
 </script>
 
 </body>
