--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <h1>Network Access Storage</h1>
+  <div class="header" role="heading">
+    <h1>Network Access Storage</h1>
+    <button id="dashboard-btn">Dashboard</button>
+  </div>
   <div class="path">
     <button id="backButton" style="display:none;">Back</button>
     <div id="breadcrumb"></div>
